welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:8: error: not found: value i
	T(i+1)= getCouleurSol
          ^